helms-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: "nginx"  # Tell Kubernetes to use the NGINX Ingress Controller
  rules:
    - host: ""
      http:
        paths:
          - path: /  # Route all traffic...
            pathType: Prefix
            backend:
              service:
                name: backend-service  # ...to the backend-service service
                port:
                  number: 80
          - path: /auth  # Route all traffic...
            pathType: Prefix
            backend:
              service:
                name: auth-svc  # ...to the auth-svc service
                port:
                  number: 8080
